--- a/music.html
+++ b/music.html
@@ -24,7 +24,7 @@
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
       </a>
     </div>
-    <span style="font-size: 24px;  text-transform: uppercase; font-weight: bold;"><a href="/index.html" style="color: black; text-decoration: none;;">Fandom Genshin Impact</a></span>
+    <span style="font-size: 24px;  text-transform: uppercase; font-weight: bold;"><a href="index.html" style="color: black; text-decoration: none;;">Fandom Genshin Impact</a></span>
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
       <li><a href="/index.html" class="nav-link px-2 link-secondary">Main</a></li>
       <li class="nav-item dropdown">
@@ -33,8 +33,8 @@
         </a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="regions.html">Regions</a></li>
-          <li><a class="dropdown-item" href="/lore.html">Lore</a></li>
-          <li><a class="dropdown-item" href="/music.html">Media</a></li>
+          <li><a class="dropdown-item" href="lore.html">Lore</a></li>
+          <li><a class="dropdown-item" href="music.html">Media</a></li>
         </ul>
       </li>
       <li><a href="/login.html" class="nav-link px-2">Login</a></li>
