--- a/music.html
+++ b/music.html
@@ -17,8 +17,8 @@
 <body>
   <header
     class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <a href="/index.html" style="color: black; text-decoration: none;;"><svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
-      <img src="/resoures/images/icons8-genshin-impact-logo-64.png" alt="" width="50" height="50">
+    <a href="index.html" style="color: black; text-decoration: none;;"><svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
+      <img src="./resoures/images/icons8-genshin-impact-logo-64.png" alt="" width="50" height="50">
     </svg> </a>
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
@@ -26,7 +26,7 @@
     </div>
     <span style="font-size: 24px;  text-transform: uppercase; font-weight: bold;"><a href="index.html" style="color: black; text-decoration: none;;">Fandom Genshin Impact</a></span>
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="/index.html" class="nav-link px-2 link-secondary">Main</a></li>
+      <li><a href="index.html" class="nav-link px-2 link-secondary">Main</a></li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           More...
@@ -37,7 +37,7 @@
           <li><a class="dropdown-item" href="music.html">Media</a></li>
         </ul>
       </li>
-      <li><a href="/login.html" class="nav-link px-2">Login</a></li>
+      <li><a href="login.html" class="nav-link px-2">Login</a></li>
     </ul>
     <input type="text" id="searchInput" placeholder="Search">
     <div id="searchResults"></div>
@@ -46,7 +46,7 @@
     <div class="container-fluid text-center">
       <div class="row content">
         <div class="col-sm-1 sidenav"
-            style="background-image: url(/resoures/images/1161810.jpg); background-position: left center; background-attachment:fixed; background-repeat: repeat-y; background-size: contain;">
+            style="background-image: url(./resoures/images/1161810.jpg); background-position: left center; background-attachment:fixed; background-repeat: repeat-y; background-size: contain;">
           </div>
         <div class="col-sm-10 text-left" style="background-color:white;">
         </div>
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="col-sm-1 sidenav"
-    style="background-image: url(/resoures/images/1161810.jpg); background-attachment: fixed; background-repeat: repeat-y; background-position: right; background-size: contain;">
+    style="background-image: url(./resoures/images/1161810.jpg); background-attachment: fixed; background-repeat: repeat-y; background-position: right; background-size: contain;">
   </div>  
   </div>
 </div>
