--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
   <body>
     <header
     class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <a href="/index.html" style="color: black; text-decoration: none;;"><svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
-      <img src="/resoures/images/icons8-genshin-impact-logo-64.png" alt="" width="50" height="50">
+    <a href="index.html" style="color: black; text-decoration: none;;"><svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
+      <img src="./resoures/images/icons8-genshin-impact-logo-64.png" alt="" width="50" height="50">
     </svg> </a>
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
@@ -22,7 +22,7 @@
     </div>
     <span style="font-size: 24px;  text-transform: uppercase; font-weight: bold;"><a href="index.html" style="color: black; text-decoration: none;;">Fandom Genshin Impact</a></span>
     <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-      <li><a href="/index.html" class="nav-link px-2 link-secondary">Main</a></li>
+      <li><a href="index.html" class="nav-link px-2 link-secondary">Main</a></li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           More...
@@ -33,7 +33,7 @@
           <li><a class="dropdown-item" href="music.html">Media</a></li>
         </ul>
       </li>
-      <li><a href="/login.html" class="nav-link px-2">Login</a></li>
+      <li><a href="login.html" class="nav-link px-2">Login</a></li>
     </ul>
     <input type="text" id="searchInput" placeholder="Search">
     <div id="searchResults"></div>
