--- a/login.html
+++ b/login.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign in</title>
+  <link rel="icon" href="/resoures/images/icons8-genshin-impact-logo-64.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
-  </head>
+    </head>
   <body>
     <header
     class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
@@ -41,7 +40,7 @@
     <div
       class="container-fluid"
       style="display: flex; justify-content: center; margin: 100px 0"
-    >
+    > 
       <div class="wrapper">
         <h3>Authorization</h3>
         <form>
@@ -66,112 +65,75 @@
       </div>
     </div>
     <footer class="text-center text-lg-start text-white" style="background-color: rgb(51, 51, 51)">
-
       <div class="container p-4 pb-0">
-
         <section class="">
-
           <div class="row">
-
-
-
-
             <hr class="w-100 clearfix d-md-none" />
-
-
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Games</h6>
               <p>
-                <a class="text-white">Demon Souls</a>
+                <a class="text-white">Honkai Impact 3rd</a>
               </p>
               <p>
-                <a class="text-white">Bloodborne</a>
+                <a class="text-white">Honkai Starrail</a>
               </p>
               <p>
-                <a class="text-white">Sekiro</a>
+                <a class="text-white">Tears of Themis</a>
               </p>
               <p>
-                <a class="text-white">Elden Ring</a>
+                <a class="text-white">Zenless Zone Zero</a>
               </p>
             </div>
-
-
             <hr class="w-100 clearfix d-md-none" />
-
-
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">
                 Useful links
               </h6>
               <p>
-                <a class="text-white" href="https://darksouls.fandom.com/ru/wiki/Dark_Souls_Wiki">Dark Souls 1 Wiki</a>
+                <a class="text-white" href="https://genshin-impact.fandom.com/wiki/Genshin_Impact">Genshin Impact Wiki</a>
               </p>
               <p>
-                <a class="text-white" href="https://darksouls.fandom.com/ru/wiki/Dark_Souls_II">Dark Souls 2 Wiki</a>
+                <a class="text-white" href="https://genshin-impact.fandom.com/wiki/Lore">Lore Wiki</a>
               </p>
               <p>
-                <a class="text-white" href="https://darksouls.fandom.com/ru/wiki/Dark_Souls_III">Dark Souls 3 Wiki</a>
+                <a class="text-white" href="https://genshin-impact.fandom.com/wiki/Soundtrack">SoundTracks Wiki</a>
               </p>
             </div>
-
-
             <hr class="w-100 clearfix d-md-none" />
-
-
             <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
               <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
               <p><i class="fas fa-home mr-3"></i> Astana, AS 10012, KZ</p>
-              <p><i class="fas fa-envelope mr-3"></i> zhanik.planet1@gmail.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 7 7472650526</p>
+              <p><i class="fas fa-envelope mr-3"></i> zhalgas.karsenbai@gmail.com</p>
+              <p><i class="fas fa-phone mr-3"></i> + 7 7087323221</p>
               <p><i class="fas fa-print mr-3"></i> + 7 7784624185</p>
             </div>
-
           </div>
-
         </section>
-
-
         <hr class="my-3">
-
-
         <section class="p-3 pt-0">
           <div class="row d-flex align-items-center">
-
             <div class="col-md-7 col-lg-8 text-center text-md-start">
-
               <div class="p-3">
-                © 2023 Copyright: Zhankozy Abdisattar
+                © 2023 Copyright: Karsenbay Zhalgas
               </div>
-
             </div>
-
-
-
             <div class="col-md-5 col-lg-4 ml-lg-0 text-center text-md-end">
-
               <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
                   class="fab fa-facebook-f"></i></a>
-
-
-              <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
-                  class="fab fa-twitter"></i></a>
-
-
-              <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
-                  class="fab fa-google"></i></a>
-
-
+              <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button" href="https://github.com/jksenby"><i
+                  class="fab fa-github"></i></a>
+              <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button" href="www.linkedin.com/in/jksenby
+              "><i
+                  class="fab fa-linkedin"></i></a>
               <a class="btn btn-outline-light btn-floating m-1" class="text-white" role="button"><i
                   class="fab fa-instagram"></i></a>
             </div>
-
           </div>
         </section>
-
-      </div>
-
-    </footer>
+      </div>  
+      </footer>
     <script src="./js/jquery-3.7.1.min.js"></script>
+    <script src="anime.min.js"></script>
     <script src="./js/login.js"></script>
     <script type="text/javascript"
     src="https://mdbootstrap.com/api/snippets/static/download/MDB5-Free_6.4.2/js/mdb.min.js"></script>
