--- a/music.html
+++ b/music.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fandom Genshin Impact</title>
   <link rel="icon" href="/resoures/images/icons8-genshin-impact-logo-64.png" type="image/x-icon">
+  <link rel="icon" href="/resoures/images/icons8-genshin-impact-logo-64.png" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script src="https://bootstraptema.ru/plugins/jquery/jquery-1.11.3.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://bootstraptema.ru/snippets/audio/2016/circle-player/circle-player.css" /> 
 </head>
 <body>
@@ -201,5 +200,4 @@ crossorigin="anonymous"></script>
 <script src="./js/fatui.js"></script>
 <script src="./js/signora.js"></script>
 </body>
-
 </html>
