--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <div class="card" style="width: 18rem;">
                   <img src="./resoures/images/Genshin_Impact.webp" class="card-img-top" alt="logo">
                   <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Genshin impact was released in 2020, and very quickly become one of the most famous games</p>
                   </div>
                 </div>
               </div>
