--- a/lore.html
+++ b/lore.html
@@ -324,8 +324,8 @@ The second throne appeared in heaven, and war broke out again, as it was at the 
       </section>
     </div>  
     </footer>
-  <script src="/js/jquery-3.7.1.min.js"></script>
-  <script src="/js/lore.js"></script>
+  <script src="./js/jquery-3.7.1.min.js"></script>
+  <script src="./js/lore.js"></script>
   <script type="text/javascript"
     src="https://mdbootstrap.com/api/snippets/static/download/MDB5-Free_6.4.2/js/mdb.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
