--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header
     class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
     <a href="index.html" style="color: black; text-decoration: none;;"><svg class="bi" width="40" height="32" role="img" aria-label="Bootstrap">
-      <img src="./resoures/images/icons8-genshin-impact-logo-64.png" alt="" width="50" height="50">
+      <img src="./resoures/images/icons8-genshin-impact-logo-64.png" alt="logo" width="50" height="50">
     </svg> </a>
     <div class="col-md-3 mb-2 mb-md-0">
       <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
