--- a/regions.html
+++ b/regions.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="icon"
-      href="/resoures/images/icons8-genshin-impact-logo-64.png"
+      href="./resoures/images/icons8-genshin-impact-logo-64.png"
       type="image/x-icon"
     />
     <link
