--- a/lore.html
+++ b/lore.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lore | Fandom Genshin Impact</title>
-  <link rel="icon" href="/resoures/images/icons8-genshin-impact-logo-64.png" type="image/x-icon">
+  <link rel="icon" href="./resoures/images/icons8-genshin-impact-logo-64.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="icon"
